<resources>
    <string name="app_name">Inventory App</string>
    <string name="editor_add_product">Add a Product</string>
    <string name="category_name">Product Name</string>
    <string name="product_name">Name</string>
    <string name="product_price">0.00</string>
    <string name="product_price_cat">Product Price ($)</string>
    <string name="product_quantity_cat">Product Quantity</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name_cat">Product Supplier Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="product_supplier_telephone_cat">Product Supplier Telephone</string>
    <string name="supplier_telephone">Supplier Telephone</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="action_delete_all_products">Delete All Products</string>
    <string name="empty_view_title_text">Your storehouse is empty</string>
    <string name="empty_view_subtitle_text">Add the following information about a product: name, price, quantity, supplier name and telephone</string>
    <string name="editor_edit_product">Edit the product</string>
    <string name="editor_insert_successful">Product saved</string>
    <string name="editor_insert_failed">Product not saved: there was an error</string>
    <string name="editor_update_successful">Product updated</string>
    <string name="editor_update_failed">Product not updated: there was an error</string>
    <string name="editor_delete_successful">Product deteled</string>
    <string name="editor_delete_failed">Product not deteled: there was an error</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="product">Product:</string>
    <string name="price">Price ($):</string>
    <string name="quantity">Quantity:</string>
    <string name="sale">SALE</string>
    <string name="sold_out">You sold out this product!</string>
    <string name="zero">0</string>
    <string name="ask_price">This product should have a price</string>
    <string name="call_supplier">Call Supplier</string>
</resources>
