<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/catalog_margin"
    tools:context=".EditorActivity">

    <!-- Name category -->
    <LinearLayout style="@style/LinearLayoutEditorCatStyle">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <!-- Input fields -->
        <LinearLayout style="@style/LinearLayoutEditorStyle">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout style="@style/LinearLayoutEditorCatStyle">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_price_cat" />

        <!-- Input fields -->
        <LinearLayout style="@style/LinearLayoutEditorStyle">

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_price" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout style="@style/LinearLayoutEditorCatStyle">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_quantity_cat" />

        <!-- Input fields -->
        <LinearLayout style="@style/LinearLayoutEditorStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_remove_item_button"
                style="@style/quantity_button"
                android:text="-" />

            <TextView
                android:id="@+id/edit_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/zero" />

            <Button
                android:id="@+id/edit_add_item_button"
                style="@style/quantity_button"
                android:text="+" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier name category -->
    <LinearLayout style="@style/LinearLayoutEditorCatStyle">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier_name_cat" />

        <!-- Input fields -->
        <LinearLayout style="@style/LinearLayoutEditorStyle">

            <EditText
                android:id="@+id/edit_product_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier telephone category -->
    <LinearLayout style="@style/LinearLayoutEditorCatStyle">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier_telephone_cat" />

        <!-- Input fields -->
        <LinearLayout style="@style/LinearLayoutEditorStyle"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_product_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_telephone" />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/edit_call_button"
        style="@style/call_button"
        android:text="@string/call_supplier" />

</LinearLayout>